--- a/.github/workflows/BlackDuckScan.yml
+++ b/.github/workflows/BlackDuckScan.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     types: [ opened, synchronize ]
     branches:
-      - main
+      - master
 
 permissions:
   actions: read
